# AIBOX

./: CMakeLists.txt  README.md  README_EN.md  build.sh
include/: BaseModel.h  DatabaseManager.h  DetectionModels.h  FalldownDetect.h  FileUtils.h  FireSmokeDetect.h  MutexQueue.h  PersonAttribute.h  PersonDetect.h  ResultQueue.h  RknnPool.h  RknnPool.inl  ThreadPool.h  ThreadPool.inl  drm_func.h  postprocess.h  preprocess.h  rga_func.h
model/rk3588/: perattr.rknn
sort/src/: Hungarian.cc  KalmanTracker.cc  sort.cc
src/: FalldownDetect.cpp  FileUtils.c  FireSmokeDetect.cpp  PersonAttribute.cpp  PersonDetect.cpp  main.cpp  postprocess.cpp  preprocess.cpp
